--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ To replace this image, simply find and delete the hero.jpg file in the project f
 
 <!--Replace the image in this picture frame. Match code with file name/type. Control image width using inline styling. Adjust image size to 1200-600px depending on its need to scale across a screen. Remove or adjust the frame using the frame class on style.css.-->
 <div>
-  <img class="frame" src="code.jpg" width="75%" alt="describe the image HERE for accessibility purposes">
+  <img class="frame" src="post.jpg" width="75%" alt="describe the image HERE for accessibility purposes">
 <!--Add alt="text" image descriptions for visually impaired individuals using screen readers. Describe your image as clearly and succinctly as possible. Add captions. They provide another important layer of accessibility.-->
     <div class="caption"><i>Add a caption</i></div>
 </div>
@@ -66,19 +66,18 @@ To replace this image, simply find and delete the hero.jpg file in the project f
 <div class="flexbox-container">
   <div class="row">
       <div class="column">
-          <img src="pgrid1.jpg" alt="describe the image HERE for accessibility purposes">
-          <img src="pgrid2.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="Comment1.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="Comment2.jpg" alt="describe the image HERE for accessibility purposes">
       </div>
       <div class="column">
-          <img src="pgrid3.jpg" alt="describe the image HERE for accessibility purposes">
-          <img src="pgrid4.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="Comment3.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="Comment4.jpg" alt="describe the image HERE for accessibility purposes">
       </div>
       <div class="column">
-          <img src="pgrid5.jpg" alt="describe the image HERE for accessibility purposes">
-          <img src="pgrid6.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="Comment5.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="Comment6.jpg" alt="describe the image HERE for accessibility purposes">
       </div>
   </div>
-      <p><i>Add a caption.</i></p>
   </div>
   
 <!--We all seek entertainment in our leisure time. What entertains you? How does it connect or distract you from other parts of your life? What is good and bad about this consumption.-->
@@ -89,12 +88,6 @@ To replace this image, simply find and delete the hero.jpg file in the project f
     <p>I started thinking back to the little things I’d seen—whispers, eye-rolls, kids laughing after she walked by. I had never really paid attention before. It wasn’t like anyone was pushing her into lockers or stealing her lunch money. But now I wondered, was that what she meant? That just because it didn’t look like a movie version of bullying didn’t mean it wasn’t real?</p>
 </div>
 
-<!--You can keep or replace this polaroid image with something else. You can find other elements like YouTube video players in the "code repository" at the bottom of this HTML page. Simply copy and paste the code snippets where you want them to appear on your website.-->
-<div class="polaroid">
-  <img src="polaroid.jpg" alt="describe the image HERE for accessibility purposes" style="width:100%">
-     <div class="polaroid-caption">
-       <p><i>Add a caption</i></p>
-     </div>
 </div>
 
 <!--Let's talk a little about the future. What kind of job or career would you like to pursue? What is your reasoning for going down this path? How might this job or career connect to the other areas about which we've written, home and community, interests and activities, and entertainment? Why is this job or career important to you or in general?-->
@@ -117,11 +110,6 @@ To replace this image, simply find and delete the hero.jpg file in the project f
   <img src="message4.jpg" alt="describe the image HERE for accessibility purposes" style="width:100%">
 </div>
 
-  <!--Like a hero image, a parallax window provides a degree of animation for your viewer.-->
-<div class="parallax"></div>
-  <div class="caption">
-    <p><i>Add a caption.</i></p>
-</div>
 
 <div class="logo">
   <img src="codela.jpg" alt="Codela logo" width="25%">
