--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ To replace this image, simply find and delete the hero.jpg file in the project f
 
 <!--Replace the image in this picture frame. Match code with file name/type. Control image width using inline styling. Adjust image size to 1200-600px depending on its need to scale across a screen. Remove or adjust the frame using the frame class on style.css.-->
 <div>
-  <img class="frame" src="post.jpg" width="75%" alt="describe the image HERE for accessibility purposes">
+  <img class="frame" src="post.png" width="75%" alt="describe the image HERE for accessibility purposes">
 <!--Add alt="text" image descriptions for visually impaired individuals using screen readers. Describe your image as clearly and succinctly as possible. Add captions. They provide another important layer of accessibility.-->
     <div class="caption"><i>Add a caption</i></div>
 </div>
@@ -66,16 +66,16 @@ To replace this image, simply find and delete the hero.jpg file in the project f
 <div class="flexbox-container">
   <div class="row">
       <div class="column">
-          <img src="Comment1.jpg" alt="describe the image HERE for accessibility purposes">
-          <img src="Comment2.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="message1.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="message2.jpg" alt="describe the image HERE for accessibility purposes">
       </div>
       <div class="column">
-          <img src="Comment3.jpg" alt="describe the image HERE for accessibility purposes">
-          <img src="Comment4.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="message3.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="message4.jpg" alt="describe the image HERE for accessibility purposes">
       </div>
       <div class="column">
-          <img src="Comment5.jpg" alt="describe the image HERE for accessibility purposes">
-          <img src="Comment6.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="message5.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="message6.jpg" alt="describe the image HERE for accessibility purposes">
       </div>
   </div>
   </div>
