--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@ To replace this image, simply find and delete the hero.jpg file in the project f
 <div class="flexbox-container">
   <div class="row">
       <div class="column">
-          <img src="message1.jpg" alt="describe the image HERE for accessibility purposes">
-          <img src="message2.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="Comment1.png" alt="describe the image HERE for accessibility purposes">
+          <img src="Comment2.png" alt="describe the image HERE for accessibility purposes">
       </div>
       <div class="column">
-          <img src="message3.jpg" alt="describe the image HERE for accessibility purposes">
-          <img src="message4.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="Comment3.png" alt="describe the image HERE for accessibility purposes">
+          <img src="Comment4.png" alt="describe the image HERE for accessibility purposes">
       </div>
       <div class="column">
-          <img src="message5.jpg" alt="describe the image HERE for accessibility purposes">
-          <img src="message6.jpg" alt="describe the image HERE for accessibility purposes">
+          <img src="Comment5.png" alt="describe the image HERE for accessibility purposes">
+          <img src="Comment6.png" alt="describe the image HERE for accessibility purposes">
       </div>
   </div>
   </div>
