--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ To replace this image, simply find and delete the hero.jpg file in the project f
 
 <!--Replace the image in this picture frame. Match code with file name/type. Control image width using inline styling. Adjust image size to 1200-600px depending on its need to scale across a screen. Remove or adjust the frame using the frame class on style.css.-->
 <div>
-  <img class="frame" src="post.png" width="75%" alt="describe the image HERE for accessibility purposes">
+  <img class="frame" src="post.png" width="15%" alt="describe the image HERE for accessibility purposes">
 <!--Add alt="text" image descriptions for visually impaired individuals using screen readers. Describe your image as clearly and succinctly as possible. Add captions. They provide another important layer of accessibility.-->
     <div class="caption"><i>Add a caption</i></div>
 </div>
@@ -108,6 +108,15 @@ To replace this image, simply find and delete the hero.jpg file in the project f
   <iframe src="https://giphy.com/embed/VeerK4hE9sjoB8e6OQ" width="480" height="305" style="" title = "" class="giphy-embed" allowFullScreen></iframe>
 
   <img src="message4.jpg" alt="describe the image HERE for accessibility purposes" style="width:100%">
+</div>
+
+<div class="text-block" style="text-align: left">
+  <h2>The Aftermath</h2>
+  <p>After that, we started talking more. At first, it was just through messages—sharing stuff from class, complaining about school. But then, in history, it felt natural to say, “Hey,” or ask if she wanted to work on an assignment together. It wasn’t like we suddenly became best friends, but she wasn’t just the quiet girl who sat next to me anymore.</p>
+
+<p>The more we talked, the more I started paying attention—not just to her, but to everything. I noticed when someone was being left out of a group chat, or when a joke wasn’t really a joke. And the next time I saw someone whispering about Maya, I didn’t just look away—I spoke up.</p>
+
+<h1>All because of one post. And one message.</h1>
 </div>
 
 
